--- a/css/styles.css
+++ b/css/styles.css
@@ -29,17 +29,7 @@
 }
 
 body {
-    /* background-color: var(--main-grey) !important; */
     background-color: black !important;
-    /* height: 100vh;; */
-}
-
-.hola{
-    min-height: calc(100vh - 325px);
-}
-
-.vh1000 {
-    height: 100vh;
 }
 
 h1, h2, h3 {
@@ -91,6 +81,7 @@ ANCHOR  Sub-menu
     position: absolute;
     top: 68px;
     width: 20rem;
+    padding-left: 0px;
 }
 @media (max-width: 390px) {
     .topNavbar ul:last-child { 
@@ -188,12 +179,6 @@ ANCHOR  Sub-menu
 .overflow-hidden {
     overflow: hidden;   
 }
-
-/* @media (max-width:1000px) {
-    .outstandingNewsCard {
-        width: 18rem;
-    }
-} */
 
 .outstandingNewsCard img {
     width: 100%;
@@ -315,4 +300,124 @@ ANCHOR  Sub-menu
 .newsImages {
     max-width: 600px;
     border-radius: 5px;
+}
+
+hr {
+    display: block; height: 1px;
+    border: 0; border-top: 1px solid #ccc;
+    margin: 1em 0; padding: 0
+}
+
+.navSliderItem {
+    height: 120px;
+    position: relative;
+    overflow: hidden;
+}
+.navSliderItem img {
+    width: inherit;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+
+.red-line {
+    border: 1px var(--main-red) solid;
+    width: 100%;
+}
+
+.bgMainRed {
+    background-color: var(--main-red);
+}
+
+.breadcrumbContainer {
+    background: rgb(74,74,74);
+    background: linear-gradient(260deg, rgba(74,74,74,1) 8%, rgba(29,29,29,1) 100%);
+}
+
+/*================================
+SECTION Boostrap Custom 
+================================*/
+
+/* ANCHOR comienzo nav-pills */
+.nav-pills .nav-link {
+    color: #fff;
+    font-size: 1.2rem;
+}
+
+.nav-pills .nav-link:hover {
+    color: var(--main-red);
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff;
+    background-color: var(--main-red);
+}
+/* ANCHOR final nav-pills */
+
+/* ANCHOR Comienzo accordion */
+
+.accordion-body {
+    padding: 1rem 0rem;
+}
+
+.accordion-body, .accordion button {
+    color: white;
+}
+
+.accordion-button:not(.collapsed) {
+    color: white;
+    background-color: #c60f48;
+}
+
+.accordion-button:focus {
+    z-index: 3;
+    border-color: #830c32;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgb(130 15 65);
+}
+
+.accordion-button {
+    border: 1px solid rgb(255 255 255 / 46%);
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: url(../images/svg/chevron-down-solid.svg);
+    transform: rotate(180deg);
+}
+.accordion-button::after {
+    background-image: url(../images/svg/chevron-down-solid.svg);
+}
+
+.accordion button {
+    text-align: left;
+}
+
+@media (max-width:991px ) {
+    .accordion button {
+        text-align: center;
+    }
+}
+
+/* ANCHOR Final accordion */
+
+.breadcrumb {
+    margin-bottom: 0px;
+}
+
+.breadcrumb ol {
+    margin-bottom: 0px;
+}
+
+.breadcrumb-item {
+    font-size: 1.2rem;
+}
+
+.breadcrumb-item a {
+    color: white;
+}
+
+.breadcrumb-item a:hover {
+    color: var(--main-red);
 }
