--- a/scss/components/_slick-slider.scss
+++ b/scss/components/_slick-slider.scss
@@ -22,6 +22,7 @@
             color: #ccc;
         }
         p {
+            width: 100%;
             font-family: $font-jura;
             margin-bottom: 0px;
             padding: 10px;
