--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -2,3 +2,6 @@ $main-black: #1D1D1D;
 $main-darkness: #111111;
 $main-grey: #4A4A4A;
 $main-red: #EB3136;
+$ps-blue: #006FCD;
+$xbox-green: #017918;
+$nintendo-red: #E80015;
