--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,72 @@ body {
   .ps5-game__title small {
     font-size: 1.5rem; }
 
+.header-box {
+  background-color: #201F23;
+  margin-bottom: -6px; }
+  .header-box .header-xbox__video {
+    width: 100%; }
+  .header-box .header-xbox__title {
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    width: 126px;
+    font-size: 1.7rem;
+    border-bottom: 4px solid #017918 !important;
+    animation-duration: 3s;
+    font-family: Arial, Helvetica, sans-serif !important; }
+    @media (min-width: 768px) {
+      .header-box .header-xbox__title {
+        top: 95px;
+        left: 70px;
+        width: 185px;
+        font-size: 2.4rem; } }
+    @media (min-width: 992px) {
+      .header-box .header-xbox__title {
+        top: 150px;
+        left: 130px;
+        font-size: 4rem;
+        width: 296px; } }
+
+.xbox-container {
+  background-color: #201F23; }
+
+#nav-xbox h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 0px; }
+
+#nav-xbox h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 0px; }
+
+#nav-xbox h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 0px; }
+
+#nav-xbox h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 0px; }
+
+#nav-xbox h5 {
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 0px; }
+
+#nav-xbox h6 {
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 0px; }
+
+.xbox-container__title {
+  font-size: 2rem; }
+  @media (min-width: 992px) {
+    .xbox-container__title {
+      font-size: 3.5rem; } }
+
+.xbox-joystick-container .xbox-joystick-container__text {
+  position: absolute;
+  top: 0px;
+  padding: 1rem;
+  height: 100%; }
+
 @font-face {
   font-family: "Quantico Bold";
   src: url(../fonts/Quantico-Bold.ttf); }
