--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -27,6 +27,29 @@ $breakpoint-lg: 1360px;
     }
   }
 }
+@mixin bs_media($media) {
+  @if $media == sm {
+    @media (min-width: 576px) {
+      @content;
+    }
+  } @else if $media == md {
+    @media (min-width: 768px) {
+      @content;
+    }
+  } @else if $media == lg {
+    @media (min-width: 992px) {
+      @content;
+    }
+  } @else if $media == xl {
+    @media (min-width: 1200px) {
+      @content;
+    }
+  } @else if $media == xxl {
+    @media (min-width: 1400px) {
+      @content;
+    }
+  }
+}
 
 @mixin allHeaderText {
   @for $i from 1 through 6 {
