--- a/scss/views/_consoles-views.scss
+++ b/scss/views/_consoles-views.scss
@@ -1,4 +1,5 @@
 @import "../utilities/mixins";
+@import "../utilities/colors";
 
 .ps5-logo1 {
   width: 180px;
@@ -71,5 +72,65 @@
   font-size: 4rem;
   small {
     font-size: 1.5rem;
+  }
+}
+
+.header-box {
+  background-color: $xbox-bg-black;
+  margin-bottom: -6px;
+  .header-xbox__video {
+    width: 100%;
+  }
+  
+  .header-xbox__title {
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    width: 126px;
+    font-size: 1.7rem;
+    border-bottom: 4px solid $xbox-green !important;
+    animation-duration: 3s;
+    font-family: Arial, Helvetica, sans-serif !important;
+
+    @include bs_media(md) {
+      top: 95px;
+      left: 70px;
+      width: 185px;
+      font-size: 2.4rem;
+    }
+
+    @include bs_media(lg) {
+      top: 150px;
+      left: 130px;
+      font-size: 4rem;
+      width: 296px;
+    }
+  }
+}
+
+.xbox-container {
+  background-color: $xbox-bg-black;
+}
+
+#nav-xbox {
+  @include allHeaderText {
+    font-family: Arial, Helvetica, sans-serif;
+    border-bottom: 0px;
+  }
+}
+
+.xbox-container__title {
+  font-size: 2rem;
+  @include bs_media(lg) {
+    font-size: 3.5rem;
+  }
+}
+
+.xbox-joystick-container {
+  .xbox-joystick-container__text {
+    position: absolute;
+    top: 0px;
+    padding: 1rem;
+    height: 100%;
   }
 }
