--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,12 +14,16 @@
     background-color: $main-black;
     box-shadow: 0px 1px 8px $main-red;
     .topheader__item {
-      background-color: $main-darkness;
       font-family: $font-jura;
-      font-size: 1.5rem;
-      a {
+      button {
         padding: 1rem;
         color: white;
+        background-color: $main-darkness;
+        font-size: 1.5rem;
+        border-radius: 0px;
+        &:focus {
+          box-shadow: none;
+        }
       }
       .topheader__submenu {
         display: none;
@@ -27,7 +31,7 @@
         height: 100vh;
         left: 0px;
         position: absolute;
-        top: 68px;
+        top: 70px;
         width: 20rem;
         padding-left: 0px;
         .topheader__submenu-item {
@@ -36,6 +40,7 @@
             a {
               color: black;
               font-size: 1.3rem;
+              padding: 20px;
             }
         }
 
@@ -54,13 +59,6 @@
         .topheader__submenu {
           width: 15rem;
         }
-      }
-    }
-    .topheader__item:hover {
-      .topheader__submenu {
-        display: block;
-        animation: slideInLeft;
-        animation-duration: 0.5s;
       }
     }
   }
