--- a/scss/views/_consoles-views.scss
+++ b/scss/views/_consoles-views.scss
@@ -29,7 +29,7 @@
   margin: 0px auto;
 }
 
-#ps5-games-slider {
+#ps5-games-slider, #nintendo-games-slider {
     .slick-prev:before, .slick-next:before  {
         color: black;
     }
@@ -120,7 +120,12 @@
 }
 
 .xbox-container__title {
-  font-size: 2rem;
+  @include bs_media(xs) {
+    font-size: 1rem;
+  }
+  @include bs_media(sm) {
+    font-size: 2rem;
+  }
   @include bs_media(lg) {
     font-size: 3.5rem;
   }
@@ -133,4 +138,90 @@
     padding: 1rem;
     height: 100%;
   }
+  .xbox-joystick-container__paragraph{
+    font-size: 0.7rem;
+    @include bs_media(sm){
+      font-size: 1rem;
+    }
+  }
 }
+
+.mb-fullwidth {
+  margin-bottom: -12px;
+}
+
+.nintendo-container {
+  color: black;
+  background-color: white;
+  margin-bottom: -12px;
+  margin-left: -12px;
+  margin-right: -12px;
+
+  @include allHeaderText {
+    font-family: Arial, Helvetica, sans-serif !important;
+    border: 0px !important;
+  }
+}
+
+.nintendo-threeinone{
+  height: max-content;
+  .nintendo-threeinon__desc {
+    padding-left: 80px;
+    padding-right: 80px;
+  }
+}
+
+.nintendo-games-gallery {
+  .g-1 {
+    --bs-gutter-y: 0.30rem;
+  }
+
+  .nintendo-games-gallery__itembox {
+    overflow: hidden;
+
+    a {
+      color: white;
+      font-size: 1.5rem;
+      @include bs_media(md) {
+        font-size: 1.3rem;
+      }
+      @include bs_media(lg) {
+        font-size: 1.5rem;
+      }
+      font-weight: 800;
+      text-decoration: none;
+      text-shadow: 2px 2px 2px black;
+      p {
+        margin-bottom: 0px;
+      }
+    }
+
+    img {
+      transition: transform 1s;
+    }
+    a:hover {
+      img {
+        transform: scale(1.1,1.1);
+      }
+    }
+  }
+  
+
+  .nintendo-games-gallery__nested {
+    height: max-content
+  }
+  
+  .nintendo-games-gallery__text {
+    position: absolute;
+    max-width: 280px;
+    bottom: 3px;
+    left: 15px;
+
+
+  }
+  
+  .nintendo-games-gallery__text--main {
+    bottom: 5px;
+  }
+}
+
