Se quito el border radius de la clase form-control de bootstrap, Se pulieron ultimos detalles.

--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -43,6 +43,11 @@
         }
 
     }
+
+    .mainblock__content--small {
+        max-width: 650px;
+    }
+
     @media (max-width: 575px) {
         .mainblock__content {
             border-radius: 0px;
