--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,3 +19,4 @@
 @import './components/tab-header';
 @import './components/pegi';
 @import './components/bs-modal';
+@import './components/bs-form-control';
