--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,8 @@ h6 {
       padding-bottom: 5px;
       border-bottom: 2px solid #EB3136;
       font-family: "Jura"; }
+  .mainblock .mainblock__content--small {
+    max-width: 650px; }
   @media (max-width: 575px) {
     .mainblock .mainblock__content {
       border-radius: 0px; } }
@@ -905,3 +907,7 @@ h6 {
 
 .modal-footer {
   border-top: 0px; }
+
+.form-control {
+  border-radius: 0px;
+  border: 0px; }
