Se cambio el nombre del archivo principal de scss de main.scss a styles.scss, Se agrego el README.md

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,428 +1,22 @@
-@import 'pages/pc.scss';
-
-@font-face {
-    font-family: "Quantico Bold";
-    src: url(../fonts/Quantico-Bold.ttf);
-}
-
-@font-face {
-    font-family: "Jura";
-    src: url(../fonts/Jura-VariableFont_wght.ttf);
-}
-
-.fontQuanticoBold {
-    font-family: "Quantico Bold";
-}
-
-.stickyHeader a:link, a:visited, a:active {
-    text-decoration: none;
-}
-
-:root {
-    --main-black: #1D1D1D;
-    --main-grey : #4A4A4A;
-    --main-red  : #EB3136;
-}
-
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: black !important;
-}
-
-h1, h2, h3 {
-    font-family: 'Jura', sans-serif;
-}
-
-.red-underline {
-    border-bottom: var(--main-red) 2px solid;
-    padding-bottom: 10px;
-}
-
-.mainGrid {
-    display: grid;
-    height: 100vh;
-    position: relative;
-}
-
-.stickyHeader {
-    position: sticky;
-    top: 0px;
-    z-index: 9999;
-}
-
-/* =====================================
-SECTION Start: Nav
-======================================*/
-
-.topNavbar {
-    background-color: var(--main-black);
-    box-shadow: 0px 1px 8px var(--main-red);
-}
-
-.topNavbar ul li:first-child {
-    background-color: black;
-}
-
-.topNavbar ul:first-child a:first-child {
-    padding: 1rem;
-}
-
-/* =====================================
-ANCHOR  Sub-menu
-======================================*/
-.topNavbar ul:last-child {
-    display: none;
-    background-color: white;
-    height: 100vh;
-    left: 0px;
-    position: absolute;
-    top: 68px;
-    width: 20rem;
-    padding-left: 0px;
-}
-@media (max-width: 390px) {
-    .topNavbar ul:last-child { 
-        width: 15rem;
-    }
-}
-
-.topNavbar ul:last-child a:last-child {
-    padding: 1.5rem;
-}
-
-.topNavbar li:first-child:hover ul:last-child {
-    display: block;
-    animation: slideInLeft;
-    animation-duration: 0.5s;
-}
-
-.topNavbar ul:last-child a {
-    color: black;
-    font-size: 1.3rem;
-}
-
-.topNavbar ul:last-child li {
-    background-color: white;
-    border-bottom: transparent 1px solid;
-}
-
-.topNavbar ul:last-child li:hover {
-    background-color: rgb(206, 206, 206);
-    border-bottom: black 1px solid;
-}
-/* =====================================
-!SECTION End: Nav
-======================================*/
-.halo_background {
-    background-image: url(../images/backgrounds/halo.jpg);
-    background-repeat: no-repeat;
-    min-height: 100vh;
-}
-
-.freefire_background {
-    background-image: url(../images/backgrounds/free-fire.jpg);
-    background-repeat: no-repeat;
-    min-height: 100vh;
-}
-
-.doom_background {
-    background-image: url(../images/backgrounds/eternal-1.jpg);
-    background-repeat: no-repeat;
-    min-height: 100vh;
-}
-
-.cyberpunk_background {
-    background-image: url(../images/backgrounds/cyberpunk2077.jpg);
-    background-repeat: no-repeat;
-    min-height: 100vh;
-}
-
-.cod_background {
-    background-image: url(../images/backgrounds/cod-wz.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
-}
-@media (max-width: 1024px) {
-    .cod_background {
-        background-image: url(../images/backgrounds/mobile-cod.jpg);
-    }
-}
-
-.bgMainBlack {
-    background-color: var(--main-black);
-}
-
-.topBanner img {
-    width: 100%;
-}
-
-.nav-item a {
-    color: white;
-    font-family: 'Jura', sans-serif;
-    font-weight: 600;
-    font-size: 1.5rem;
-}
-
-.outstandingNewsCard {
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    width: 22rem;
-    overflow: hidden;
-}
-
-.overflow-hidden {
-    overflow: hidden;   
-}
-
-.outstandingNewsCard img {
-    width: 100%;
-    transition: transform 1s;
-    overflow: hidden;
-
-}
-
-.outstandingNewsCard a {
-    color: white;
-}
-
-.outstandingNewsCard a:hover {
-    color: #ccc;
-}
-
-.outstandingNewsCard a:hover img {
-    transform: scale(1.1,1.1);
-}
-
-.outstandingNewsCard p {
-    margin-bottom: 0px;
-    padding: 10px;
-    position: absolute;
-    bottom: 0px;
-    background: rgb(0,0,0);
-    background: linear-gradient(0deg, rgba(0,0,0,1) 8%, rgba(253,187,45,0) 100%);
-}
-
-.checkedStar {
-    color: gold;
-}
-
-.mainFooter {
-    background-color: var(--main-grey);
-    height: 100%;
-    padding: 3rem 4rem 4rem 4rem;
-    clear: both;
-    position: relative;
-    margin-top: auto;
-}
-
-.mainFooter a:link, a:visited, a:active {
-    text-decoration: none;
-}
-
-.dateFilterList {
-    list-style: none;
-}
-
-.dateFilterList ul {
-    list-style: square;
-    list-style-position: inside;
-}
-
-.dateFilterList a {
-    color: white;
-    font-family: 'Jura', sans-serif;
-}
-
-.stickyList {
-    position: sticky;
-    top: 70px;
-}
-
-.newsBodyColumn article {
-    background-color: var(--main-grey);
-    border-radius: 5px;
-}
-
-.socialIcons{
-    font-size: 2rem;
-    color: white;
-}
-
-.newsBodyColumn article footer a:hover{
-    color: var(--main-red);
-}
-
-.pDate {
-    font-style: italic;
-    text-transform: capitalize;
-}
-
-.fontJura {
-    font-family: 'Jura', sans-serif;
-}
-
-.capitalize {
-    text-transform: capitalize;
-}
-
-.listNone {
-    list-style: none;
-}
-
-.listSquare {
-    list-style: square;
-}
-
-.listInside{
-    list-style-position: inside;
-}
-
-.bgMainGrey {
-    background-color: var(--main-grey);
-}
-
-/* ANCHOR Border radius los contenedores*/
-.containerBorderRadius {
-    border-radius: 5px;
-}
-@media (max-width: 575px) {
-    .containerBorderRadius {
-        border-radius: 0px;
-    }
-}
-
-.newsImages {
-    max-width: 600px;
-    border-radius: 5px;
-}
-
-hr {
-    display: block; height: 1px;
-    border: 0; border-top: 1px solid #ccc;
-    margin: 1em 0; padding: 0
-}
-
-.navSliderItem {
-    height: 130px;
-    position: relative;
-    overflow: hidden;
-}
-.navSliderItem img {
-    height: inherit;
-    width: inherit;
-    object-fit: cover;
-}
-
-.pointer {
-    cursor: pointer;
-}
-
-
-.red-line {
-    border: 1px var(--main-red) solid;
-    width: 100%;
-}
-
-.bgMainRed {
-    background-color: var(--main-red);
-}
-
-.breadcrumbContainer {
-    background: rgb(74,74,74);
-    background: linear-gradient(260deg, rgba(74,74,74,1) 8%, rgba(29,29,29,1) 100%);
-}
-
-/*================================
-SECTION Boostrap Custom 
-================================*/
-
-/* ANCHOR comienzo nav-pills */
-.nav-pills .nav-link {
-    color: #fff;
-    font-size: 1.2rem;
-}
-
-.nav-pills .nav-link:hover {
-    color: var(--main-red);
-}
-
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
-    color: #fff;
-    background-color: var(--main-red);
-}
-/* ANCHOR final nav-pills */
-
-/* ANCHOR Comienzo accordion */
-
-.accordion-body {
-    padding: 1rem 0rem;
-}
-
-.accordion-body, .accordion button {
-    color: white;
-}
-
-.accordion-button:not(.collapsed) {
-    color: white;
-    background-color: #c60f48;
-}
-
-.accordion-button:focus {
-    z-index: 3;
-    border-color: #830c32;
-    outline: 0;
-    box-shadow: 0 0 0 0.25rem rgb(130, 15, 65)
-}
-
-.accordion-button {
-    // border: 1px solid rgba(255, 255, 255/ 46%);
-    border:  1px solid rgba(255, 255, 255, 46%);
-}
-
-.accordion-button:not(.collapsed)::after {
-    background-image: url(../images/svg/chevron-down-solid.svg);
-    transform: rotate(180deg);
-}
-.accordion-button::after {
-    background-image: url(../images/svg/chevron-down-solid.svg);
-}
-
-.accordion button {
-    text-align: left;
-}
-
-@media (max-width:991px ) {
-    .accordion button {
-        text-align: center;
-    }
-}
-
-/* ANCHOR Final accordion */
-
-.breadcrumb {
-    margin-bottom: 0px;
-}
-
-.breadcrumb ol {
-    margin-bottom: 0px;
-}
-
-.breadcrumb-item {
-    font-size: 1.2rem;
-}
-
-.breadcrumb-item a {
-    color: white;
-}
-
-.breadcrumb-item a:hover {
-    color: var(--main-red);
-}
+@import './global/global';
+
+@import './views/pc-views';
+@import './views/index-views';
+@import './views/consoles-views';
+
+@import './layout/header';
+@import './layout/main';
+@import './layout/footer';
+
+@import './components/slick-slider';
+@import './components/responsive-yt-iframe';
+@import './components/bs-breadcrumb';
+@import './components/bs-horizontal-card';
+@import './components/bs-nav-pills';
+@import './components/bs-accordion';
+@import './components/banner-with-logo';
+@import './components/news-article';
+@import './components/tab-header';
+@import './components/pegi';
+@import './components/bs-modal';
+@import './components/bs-form-control';
